--- a/GaslightGame/Saved/Config/Windows/Engine.ini
+++ b/GaslightGame/Saved/Config/Windows/Engine.ini
@@ -4,6 +4,7 @@ Paths=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
+Paths=../../../Engine/Plugins/FMODStudio/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
