--- a/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -448,9 +448,15 @@ CrashTracker.TimeStamp=2015.09.01-02.15.45
 CrashTracker.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2015.09.01-02.16.05
 ExternalImagePicker.LastCompileMethod=Unknown
+FMODStudioOculus.TimeStamp=2015.09.02-01.41.55
+FMODStudioOculus.LastCompileMethod=Unknown
+FMODStudio.TimeStamp=2015.09.02-01.41.54
+FMODStudio.LastCompileMethod=Unknown
+FMODStudioEditor.TimeStamp=2015.09.02-01.41.55
+FMODStudioEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
@@ -660,7 +666,7 @@ InputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisM
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1310.000 Y=750.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
