Harrison's Super Cool Movement Prototype
Movement, Dashing and Rebounding working in 4.8!

--- a/GaslightGame/Saved/Config/Windows/Engine.ini
+++ b/GaslightGame/Saved/Config/Windows/Engine.ini
@@ -1,10 +1,10 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content
+Paths=../../../../../../Users/Harrison/Documents/Unreal Projects/gaslight-game/GaslightGame/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
-Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
 Paths=../../../Engine/Plugins/FMODStudio/Content
+Paths=../../../Engine/Plugins/Runtime/LeapMotionController/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
