--- a/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -461,6 +461,7 @@ StaticMeshEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1656,21 +1657,68 @@ K2Node_CustomEvent.GraphNodeDetail=True
 K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
 K2Node_CallFunction.Graph=True
+Enemy_Blueprint_C.TransformCommon=True
+Enemy_Blueprint_C.StaticMesh=True
+Enemy_Blueprint_C.Materials=True
+Enemy_Blueprint_C.Physics=True
+Enemy_Blueprint_C.Collision=True
+Enemy_Blueprint_C.Lighting=True
+Enemy_Blueprint_C.Rendering=True
+Enemy_Blueprint_C.Tags=True
+Enemy_Blueprint_C.Input=True
+Enemy_Blueprint_C.Actor=True
+Enemy_Blueprint_C.Tick=True
+Enemy_Blueprint_C.Replication=True
+REINST_Enemy_Blueprint_C_79.TransformCommon=True
+REINST_Enemy_Blueprint_C_79.StaticMesh=True
+REINST_Enemy_Blueprint_C_79.Materials=True
+REINST_Enemy_Blueprint_C_79.Physics=True
+REINST_Enemy_Blueprint_C_79.Collision=True
+REINST_Enemy_Blueprint_C_79.Lighting=True
+REINST_Enemy_Blueprint_C_79.Rendering=True
+REINST_Enemy_Blueprint_C_79.Tags=True
+REINST_Enemy_Blueprint_C_79.Input=True
+REINST_Enemy_Blueprint_C_79.Actor=True
+SphereComponent.TransformCommon=True
+SphereComponent.Shape=True
+SphereComponent.Physics=True
+SphereComponent.Navigation=True
+SphereComponent.Collision=True
+SphereComponent.Rendering=True
+SphereComponent.Tags=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_InputAction.Input=True
+FMODAudioComponent.TransformCommon=True
+FMODAudioComponent.Sound=True
+FMODAudioComponent.Callbacks=True
+FMODAudioComponent.Tags=True
+FMODAudioComponent.Activation=True
+REINST_TopDownCharacter_C_68.None=True
+REINST_TopDownCharacter_C_68.Tick=True
+REINST_TopDownCharacter_C_68.Camera=True
+REINST_TopDownCharacter_C_68.Character=True
+REINST_TopDownCharacter_C_68.Pawn=True
+REINST_TopDownCharacter_C_68.Rendering=True
+REINST_TopDownCharacter_C_68.Replication=True
+REINST_TopDownCharacter_C_68.Input=True
+REINST_TopDownCharacter_C_68.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter=1
 /Game/Environment/TestModels/POOL.POOL=1
+/Game/TopDown/Maps/TopDownExampleMap.TopDownExampleMap:PersistentLevel.Enemy_8.FMODAudio=1
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=True
 
 [DetailCustomWidgetExpansion]
-InputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings.Dash,
+InputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.SetDestination,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Rebound,
 TopDownCharacter_C=TopDownCharacter_C.Physics.ConstraintsGroup,
 
 [RootWindow]
 ScreenPosition=X=608.000 Y=8.000
-WindowSize=X=1350.000 Y=790.000
+WindowSize=X=1400.000 Y=840.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1702,7 +1750,7 @@ MRUItem0=C:/Users/Harrison/Documents/Unreal Projects/gaslight-game/GaslightGame/
 MRUItem1=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/TopDown/Maps/TopDownExampleMap.umap
 
 [DetailPropertyExpansion]
-InputSettings=Object.Bindings.ActionMappings.ActionMappings[0]" "Object.Bindings.ActionMappings.ActionMappings[1]" "Object.Bindings.AxisMappings.AxisMappings[5]
+InputSettings=Object.Bindings.ActionMappings.ActionMappings[2]
 Object=
 CharacterMovementComponent=Object.Character Movement (General Settings).RotationRate
 PawnMovementComponent=Object.Character Movement (General Settings).RotationRate
@@ -1766,9 +1814,21 @@ bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=EditorErrors
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Environment/TestModels/POOL.POOL;
+
+[PropertyWindowWidths]
+PropertyEditorToolkit_PinAsColumnHeader=24.000000
+Property=0.500000
+Value=1.000000
+
+[PropertyWindowExpansion]
+FMODAudioComponent=Object.Sound
+SceneComponent=Object.Sound
+ActorComponent=Object.Sound
+Object=Object.Sound
 
 
