--- a/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -461,6 +461,7 @@ StaticMeshEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Fall_Blueprint.Fall_Blueprint
 OpenAssetsAtExit=/Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
@@ -1703,6 +1704,40 @@ REINST_TopDownCharacter_C_68.Rendering=True
 REINST_TopDownCharacter_C_68.Replication=True
 REINST_TopDownCharacter_C_68.Input=True
 REINST_TopDownCharacter_C_68.Actor=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.PostProcessVolume=True
+PostProcessVolume.Actor=True
+LightmassImportanceVolume.TransformCommon=True
+LightmassImportanceVolume.BrushSettings=True
+LightmassImportanceVolume.Actor=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Actor=True
+Fall_Blueprint_C.TransformCommon=True
+Fall_Blueprint_C.StaticMesh=True
+Fall_Blueprint_C.Materials=True
+Fall_Blueprint_C.Physics=True
+Fall_Blueprint_C.Collision=True
+Fall_Blueprint_C.Lighting=True
+Fall_Blueprint_C.Rendering=True
+Fall_Blueprint_C.Tags=True
+Fall_Blueprint_C.Input=True
+Fall_Blueprint_C.Actor=True
+Fall_Blueprint_C.Tick=True
+Fall_Blueprint_C.Replication=True
+REINST_Fall_Blueprint_C_94.TransformCommon=True
+REINST_Fall_Blueprint_C_94.StaticMesh=True
+REINST_Fall_Blueprint_C_94.Materials=True
+REINST_Fall_Blueprint_C_94.Physics=True
+REINST_Fall_Blueprint_C_94.Collision=True
+REINST_Fall_Blueprint_C_94.Lighting=True
+REINST_Fall_Blueprint_C_94.Rendering=True
+REINST_Fall_Blueprint_C_94.Tags=True
+REINST_Fall_Blueprint_C_94.Input=True
+REINST_Fall_Blueprint_C_94.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter=1
@@ -1717,8 +1752,8 @@ InputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisM
 TopDownCharacter_C=TopDownCharacter_C.Physics.ConstraintsGroup,
 
 [RootWindow]
-ScreenPosition=X=608.000 Y=8.000
-WindowSize=X=1400.000 Y=840.000
+ScreenPosition=X=382.000 Y=34.000
+WindowSize=X=1410.000 Y=850.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1789,6 +1824,10 @@ REINST_TopDownCharacter_C_618=Object.Character.CharacterMovement.Object.Characte
 REINST_TopDownCharacter_C_626=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 REINST_TopDownCharacter_C_634=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 REINST_TopDownCharacter_C_642=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
+PostProcessVolume="Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Volume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+NavMeshBoundsVolume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
 
 [/Script/UnrealEd.FbxImportUI]
 bUseDefaultSampleRate=False
@@ -1817,6 +1856,7 @@ bDeleteExistingMorphTargetCurves=False
 LastLogListing=EditorErrors
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Environment/TestModels/POOL.POOL;
 
