--- a/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -461,7 +461,6 @@ StaticMeshEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Fall_Blueprint.Fall_Blueprint
 OpenAssetsAtExit=/Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter
 
 [DetailCategories]
@@ -1753,7 +1752,7 @@ TopDownCharacter_C=TopDownCharacter_C.Physics.ConstraintsGroup,
 
 [RootWindow]
 ScreenPosition=X=382.000 Y=34.000
-WindowSize=X=1410.000 Y=850.000
+WindowSize=X=1420.000 Y=860.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1824,10 +1823,10 @@ REINST_TopDownCharacter_C_618=Object.Character.CharacterMovement.Object.Characte
 REINST_TopDownCharacter_C_626=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 REINST_TopDownCharacter_C_634=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
 REINST_TopDownCharacter_C_642=Object.Character.CharacterMovement.Object.Character Movement (General Settings).RotationRate" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid" "Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore" "Object.Character.CharacterMovement.Object.Movement Capabilities.NavAgentProps" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance" "Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride
-PostProcessVolume="Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
-Volume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
-Brush="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
-NavMeshBoundsVolume="Object.BrushBuilder.BrushBuilder.Object.BrushSettings" 
+PostProcessVolume=Object.PostProcessVolume" "Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+Volume=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+Brush=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
+NavMeshBoundsVolume=Object.BrushBuilder.BrushBuilder.Object.BrushSettings
 
 [/Script/UnrealEd.FbxImportUI]
 bUseDefaultSampleRate=False
