--- a/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,8 +70,8 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDown/Maps/TopDownExampleMap
 
 [ModuleFileTracking]
-GaslightGame.TimeStamp=2015.09.13-01.45.14
-GaslightGame.LastCompileMethod=External
+GaslightGame.TimeStamp=2015.09.20-07.23.46
+GaslightGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2015.09.11-22.48.29
 PakFile.LastCompileMethod=External
 SandboxFile.TimeStamp=2015.09.11-22.49.06
@@ -460,8 +460,7 @@ StaticMeshEditor.TimeStamp=2015.09.11-22.49.35
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1737,11 +1736,20 @@ REINST_Fall_Blueprint_C_94.Rendering=True
 REINST_Fall_Blueprint_C_94.Tags=True
 REINST_Fall_Blueprint_C_94.Input=True
 REINST_Fall_Blueprint_C_94.Actor=True
+test_C.Tick=True
+test_C.Tags=True
+test_C.ComponentReplication=True
+test_C.Activation=True
+test_C.Variable=True
+TargetComponent.TargetComponent=True
+TargetComponent.Tags=True
+TargetComponent.Activation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter=1
 /Game/Environment/TestModels/POOL.POOL=1
 /Game/TopDown/Maps/TopDownExampleMap.TopDownExampleMap:PersistentLevel.Enemy_8.FMODAudio=1
+/Game/TopDown/test.test=1
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=True
@@ -1780,8 +1788,8 @@ Level=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content
 Project=G:/Program Files/Epic Games/4.8/
 
 [MRU]
-MRUItem0=C:/Users/Harrison/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/TopDown/Maps/TopDownExampleMap.umap
-MRUItem1=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/TopDown/Maps/TopDownExampleMap.umap
+MRUItem0=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/TopDown/Maps/TopDownExampleMap.umap
+MRUItem1=C:/Users/Harrison/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/TopDown/Maps/TopDownExampleMap.umap
 
 [DetailPropertyExpansion]
 InputSettings=Object.Bindings.ActionMappings.ActionMappings[2]
@@ -1869,5 +1877,19 @@ FMODAudioComponent=Object.Sound
 SceneComponent=Object.Sound
 ActorComponent=Object.Sound
 Object=Object.Sound
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=True
+bMonitorContentDirectories=False
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint=,Wildcards=)
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnRestart=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
