--- a/GaslightGame/Saved/Config/Windows/Engine.ini
+++ b/GaslightGame/Saved/Config/Windows/Engine.ini
@@ -1,6 +1,6 @@
 [Core.System]
 Paths=../../../Engine/Content
-Paths=../../../../../../Users/Harrison/Documents/Unreal Projects/gaslight-game/GaslightGame/Content
+Paths=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content
 Paths=../../../Engine/Plugins/2D/Paper2D/Content
 Paths=../../../Engine/Plugins/Experimental/CharacterAI/Content
 Paths=../../../Engine/Plugins/FMODStudio/Content
@@ -20,5 +20,13 @@ SDKPath=(Path=)
 NDKPath=(Path=)
 ANTPath=(Path=)
 JavaPath=(Path=)
+
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
