--- a/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GaslightGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,7 +70,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/TopDown/Maps/TopDownExampleMap
 
 [ModuleFileTracking]
-GaslightGame.TimeStamp=2015.09.20-07.23.46
+GaslightGame.TimeStamp=2015.09.22-07.24.45
 GaslightGame.LastCompileMethod=Runtime
 PakFile.TimeStamp=2015.09.11-22.48.29
 PakFile.LastCompileMethod=External
@@ -460,7 +460,7 @@ StaticMeshEditor.TimeStamp=2015.09.11-22.49.35
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1744,6 +1744,8 @@ test_C.Variable=True
 TargetComponent.TargetComponent=True
 TargetComponent.Tags=True
 TargetComponent.Activation=True
+GameSession.TransformCommon=True
+GameSession.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Blueprints/TopDownCharacter.TopDownCharacter=1
@@ -1760,7 +1762,7 @@ TopDownCharacter_C=TopDownCharacter_C.Physics.ConstraintsGroup,
 
 [RootWindow]
 ScreenPosition=X=382.000 Y=34.000
-WindowSize=X=1420.000 Y=860.000
+WindowSize=X=1430.000 Y=870.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1774,7 +1776,7 @@ FourPanes2x2.Viewport 1.bIsImmersive=False
 FourPanes2x2.Viewport 1.MaximizedViewportID=1
 
 [Directories2]
-UNR=../../../../../../Users/Harrison/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/TopDown/Maps
+UNR=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/TopDown/Maps
 BRUSH=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/
 FBX=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/
 FBXAnim=C:/Users/Eric/Documents/Unreal Projects/gaslight-game/GaslightGame/Content/
@@ -1860,7 +1862,7 @@ bPreserveLocalTransform=False
 bDeleteExistingMorphTargetCurves=False
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=LightingResults
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1891,5 +1893,10 @@ bDetectChangesOnRestart=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[LightingBuildOptions]
+OnlyBuildSelected=False
+OnlyBuildSelectedLevels=False
+OnlyBuildVisibility=False
 
 
